2003-04-04  Jon Schewe  <jpschewe@mtu.net>

	* docs/README.developer: Added information about JSTL

	* web/scoreboard_800/main.jsp: Merged common pieces of code
	between the 800x600 scoreboard and the 1024x768 scoreboard.  

	* build.xml: (707867) Added a direct Java call to JspC using the
	-webapp option.  This handles directories correctly, however
	doesn't keep track of timestamps, so all jsp files get recompiled
	each time.

2003-04-02  Jon Schewe  <jpschewe@mtu.net>

	* web/scoreboard/allteams.jsp: Started working on using JSTL in
	the pages (707868)

	* web/scoreboard/top10.jsp: merged in changes from the
	state tournament (707844)

2003-03-30  Jon Schewe  <jpschewe@mtu.net>

	* Release version 1.0.  This is just the software we used last
	year, but now it's released on SourceForge.

2003-03-21  Jon Schewe  <jpschewe@mtu.net>
        * Moved to SourceForge.net as the project fll-sw/scoring
 
2003-01-29  Jon Schewe  <jpschewe@mtu.net>

	* web/report/performanceRunReport.jsp: Queries.getDivisions()
	requires a connection to be passed in.

2003-01-25  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/report/ScoreGroupScores.java
	(generateCategoryTable): Fixed query to only show teams from the
	score group being displayed in the table as well as only showing
	score groups for the appropriate division.

2003-01-23  Jon Schewe  <jpschewe@mtu.net>

	* web/report/finalComputedScores.jsp: Shrink point size to try and
	make sure everything prints on one page landscape.

2003-01-19  Jon Schewe  <jpschewe@mtu.net>

	* web/playoff/adminbrackets.jsp: Split out the admin version of
	the brackets into a separate page to make things easier to manage,
	even though some code is duplicated

	* web/playoff/remoteControlBrackets.jsp: Added another set of
	brackets that are completly controlled through application
	variables, so we don't have to keep hitting the next round button
	on a scrolling display.

2003-01-18  Jon Schewe  <jpschewe@mtu.net>
