@@ -17,7 +17,7 @@
   
 <%
 final Document challengeDocument = (Document)application.getAttribute("challengeDocument");
-final Connection connection = (Connection)application.getAttribute("adminConnection");
+final Connection connection = (Connection)application.getAttribute("connection");
 %>
   
 <html>
